# machine-learning-zoomcamp-2025

./: pyproject.toml
01-intro/notebooks/: homework.ipynb
02-regression/: homework.ipynb  notebook.ipynb
03-classification/: homework.ipynb  notebook.ipynb
04-evaluation/: homework.ipynb  notebook.ipynb
05-deployment/: notebook.ipynb  train.py  workshop-uv-fastapi.ipynb
05-deployment-homework/: Dockerfile  homework.ipynb  old_predict.py  predict.py  pyproject.toml  request.py  test_api.sh
