[project]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "05-deployment-homework",
]
